before the component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <main class="container">
-  <app-todo></app-todo>
+  <app-navigation></app-navigation>
+  <router-outlet></router-outlet>
 </main>
