--- a/src/app/features/traffic-light/traffic-light.component.html
+++ b/src/app/features/traffic-light/traffic-light.component.html
@@ -9,6 +9,14 @@
           >Light</a
         >
       </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLinkActive]="['active']"
+          [routerLink]="['counter']"
+          >Counter</a
+        >
+      </li>
     </ul>
   </div>
   <div class="col">
