--- a/src/app/features/traffic-light/components/counter/counter.component.html
+++ b/src/app/features/traffic-light/components/counter/counter.component.html
@@ -1,22 +1,22 @@
-<div>
-  <button (click)="decrement()" class="btn btn-sm btn-danger">-</button>
-  <span>{{ count$ | async }}</span>
-  <button (click)="increment()" class="btn btn-sm btn-success">+</button>
-</div>
-<div>
-  <button
-    [disabled]="resetDisabled$ | async"
-    (click)="reset()"
-    class="btn btn-sm btn-danger"
-  >
-    Reset
-  </button>
-</div>
+<div *ngIf="model$ | async as model">
+  <div>
+    <button (click)="decrement()" class="btn btn-sm btn-danger">-</button>
+    <span>{{ model.count }}</span>
+    <button (click)="increment()" class="btn btn-sm btn-success">+</button>
+  </div>
+  <div>
+    <button
+      [disabled]="model.resetDisabled"
+      (click)="reset()"
+      class="btn btn-sm btn-danger"
+    >
+      Reset
+    </button>
+  </div>
 
-<div *ngIf="fizzBuzz$ | async as value">
-  <div *ngIf="value === 'fizz'" class="alert alert-info">Fizz!</div>
-  <div *ngIf="value === 'buzz'" class="alert alert-info">buzz!</div>
-  <div *ngIf="value === 'fizzbuzz'" class="alert alert-info">
+  <div *ngIf="model.fizzBuzz === 'fizz'" class="alert alert-info">Fizz!</div>
+  <div *ngIf="model.fizzBuzz === 'buzz'" class="alert alert-info">buzz!</div>
+  <div *ngIf="model.fizzBuzz === 'fizzbuzz'" class="alert alert-info">
     FIZZBUZZ BABY!
   </div>
 </div>
