--- a/src/app/features/todo/components/list-items/list-items.component.html
+++ b/src/app/features/todo/components/list-items/list-items.component.html
@@ -14,6 +14,7 @@
     <button
       *ngIf="!item.completed && !item.isPending"
       class="btn btn-sm btn-danger"
+      (click)="markCompleted(item.id)"
     >
       X
     </button>
