--- a/src/app/features/todo/components/list-items/list-items.component.html
+++ b/src/app/features/todo/components/list-items/list-items.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-info" *ngIf="model?.items?.length === 0">
+  <p>You Have No Todo Items! Hooray!</p>
+</div>
 <ul class="list-unstyled" *ngIf="model">
   <li
     class="alert"
