--- a/src/app/features/todo/todo.component.html
+++ b/src/app/features/todo/todo.component.html
@@ -1,4 +1,10 @@
-<div class="row">
+<div class="alert alert-info" *ngIf="(itemsLoaded$ | async) === false">
+  <p>Loading your data... stand by.</p>
+  <img
+    src="https://smashinghub.com/wp-content/uploads/2014/08/cool-loading-animated-gif-1.gif"
+  />
+</div>
+<div class="row" *ngIf="(itemsLoaded$ | async) === true">
   <div class="col-2">
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
